objects/AuthCode__c.object
<CustomObject>
    <description>Used to store and track utilization of authorization codes. Developed for training class registrations</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Account codes were issues for</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Training Authorization Codes</relationshipLabel>
        <relationshipName>Authorization_Codes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Authorization_Code__c</fullName>
        <formula>Upper( Course_Code__c ) + Upper(right(Id,5)) + right(Name,5)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Authorization Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Course_Code__c</fullName>
        <label>Course Code</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expiration_Date__c</fullName>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Valid__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Unchecked when used</description>
        <label>Valid</label>
        <type>Checkbox</type>
    </fields>
    <label>Authorization Code</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Account__c</columns>
        <columns>Authorization_Code__c</columns>
        <columns>Course_Code__c</columns>
        <columns>Valid__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>AC-{00000}</displayFormat>
        <label>Authorization Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Authorization Codes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>